--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@ serde_json = "1.0"
 
 # --- Authentication & Security ---
 argon2 = "0.5.3"
-jsonwebtoken = "10.2.0"
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
 rand = "0.9.2"
 
 # --- Environment & Config ---
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
 tracing = "0.1.43"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"]}
 
