--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,13 @@ serde_json = "1.0"
 
 # --- Authentication & Security ---
 argon2 = "0.5.3"
-jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 rand = "0.9.2"
 
 # --- Environment & Config ---
-dotenvy = "0.15.0"
+config = "0.15.19"
 tracing = "0.1.43"
-tracing-subscriber = { version = "0.3.22", features = ["env-filter"]}
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 
 # --- Error Handling ---
 thiserror = "2.0.17"
@@ -36,4 +36,11 @@ sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "mac
 # 'protocol-ws' allows connecting to a remote Surreal instance
 # 'kv-mem' allows running an in-memory version for testing
 #surrealdb = { version = "2.4.0", features = ["protocol-ws", "kv-mem"] }
+
+[profile.release]
+strip = true
+opt-level = 3
+lto = "thin"
+panic = "abort"
+codegen-units = 1
 
